fix: align promo-card width to slider standard 1280px

--- a/src/assets/styles/mainPage/main.scss
+++ b/src/assets/styles/mainPage/main.scss
@@ -114,7 +114,7 @@
     max-width: 1320px;
 
     &-img {
-        width: 100%;
+      width: 100%;
     }
   }
 }
@@ -143,6 +143,10 @@
 
   &__image {
     width: 100%;
+  }
+
+  &__card {
+    max-width: 1280px;
   }
 }
 
